static/css/index.css
        /* CSS styles for the widget */

        html, body {
            height: 100%;
            margin: 0;
            padding: 0;
        }

        /* .widget {
            position: fixed;
            bottom: 20px;
            right: 20px;
            z-index: 9999;
            max-width: 100%; 
            right: 0px; 
            max-height: 100%;
        } */

        .widget {
            position: fixed;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            z-index: 9999;
            display: flex;
            justify-content: center;
            align-items: center;
        }

        /* .chatbot {
            position: fixed;
            bottom: 15px;
            right: 20px;
            z-index: 9999;
            width: 350px;
            height: 600px;
            background-color: white;
            border-radius: 10px;
            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
            animation: slide-up 0.5s ease-out;
        } */
        
        .chatbot {
            width: 100%; /* Adjust based on preference */
            height: 100%; /* Adjust based on preference */
            background-color: white;
            /* border-radius: 10px; */
            box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
            display: flex;
            flex-direction: column;
            justify-content: space-between; /* Add this line */
        }

        .chatbox {
            display: flex;
            flex-direction: column;
            width: 100%;
            height: 100%;
            background-color: var(--background-color);
            /* border-radius: 10px; */
        }

        .chatbox-header {
            display: flex;
            justify-content: space-between;
            align-items: center;
            padding: 10px;
            background-color: var(--border-color);
            color: rgb(0, 0, 0);
            /* border-top-left-radius: 10px;
            border-top-right-radius: 10px; */
            text-align: center;
        }

        .chatbox-title {
            font-size: 20px;
            font-weight: bold;
            margin: 0;
            display: flex;
            align-items: center;
        }

        .chatbox-icon {
            margin-right: 10px;
        }

        .chatbox-title img {
            margin-right: 10px;
            width: 40px;
            height: 40px;
        }

        .chatbox-top {
            overflow-y: scroll;
            width: 190px;
            background-color: var(--border-color);
            font-family: var(--font-family);
            align-items: center;
            color: var(--title-color);
        }

        .close-button {
            width: 30px;
            height: 30px;
            cursor: pointer;
            transition: transform 0.3s ease-in-out;
        }
        
        .close-button:hover {
            transform: scale(1.1);
        }

        .chatbox-close {
            position: absolute;
            padding-top: 5px;
            right: 10px;
        }

        /* .chatbox-body {
            flex-grow: 1;
            padding: 5px;
            width: 340.5px;
            height: 440px; 
            overflow-y: scroll;
            font-family: var(--font-family);
            background-color: var(--background-color);
        } */

        .chatbox-body {
            flex-grow: 1;
            padding: 10px;
            overflow-y: auto;
            font-family: var(--font-family);
            background-color: var(--background-color);
        }

        .suggested-questions {
            display: flex;
            overflow-x: scroll;
            white-space: nowrap;
            border-radius: 7px;
            margin-bottom: 9px;
        } 
        .suggested-question {
            display: flex;
            padding: 5px;
            margin: 2px;
            background-color: gainsboro;
            border-radius: 7px;
            cursor: pointer;
            font-size: 12px;
            letter-spacing: -0.5px;
            color: rgb(61, 61, 61);
            margin-bottom: 9px;
        }
        .suggested-questions::-webkit-scrollbar { /* For Chrome, Safari and Edge */
            margin-top: 5px;
            height: 5px;
        }

        .suggested-questions::-webkit-scrollbar-thumb {
            background-color: darkgrey;
            border-radius: 3px;
        }

        .widget-button {
            width: 100px;
            height: 100px;
            background-image: url('/static/images/chatboticon.png');
            background-size: cover;
            transition: transform 0.2s ease-in-out;
        }

        .widget-button:hover {
            transform: scale(1.1);
        }

        .chatbox-input {
            border: none;
            display: flex;
            align-items: center;
            padding: 10px;
            background-color: #ffffff;
        }

        .input-wrapper {
            display: flex;
            flex-grow: 1;
            background-color: #f5f5f5;
            border-radius: 10px;
            margin-bottom: 20px;
        }

        #user-input {
            flex-grow: 1;
            padding: 10px;
            border: none;
            border-radius: 5px;
            font-size: 16px;
            background-color: transparent;
            margin-right: 5px;
        }

        #send-button svg {
            width: 30px; /* adjust as needed */
            height: 30px; /* adjust as needed */
            cursor: pointer;
            padding-top: 10px;
            fill: rgb(0,0,0);
            transition: transform 0.3s ease-in-out;
        }

        #send-button svg:hover {
            transform: scale(1.1);
        }

        .powered-by {
            text-align: center;
            position: absolute;
            bottom: 0;
            width: 100%;
            font-family: 'Roboto', sans-serif;
            font-style: italic; 
            color: grey;
            padding-bottom: 5px;
        }

        .powered-by img {
            height: 15px;
            vertical-align: middle;
            padding-bottom: 4px;
            padding-left: 2px;
        }   

        /* The styling for the chatbot messages and rating begins here */
        .msg-info-name {
            display: flex;
            align-items: flex-end;
        }
        
        .msg-info-name img {
            width: 30px;
            height: 30px;
            margin-right: 9px;

        }

        .msg {
            display: flex;
            flex-direction: row;
            margin-bottom: 4px;
        }

        .left-msg {
            justify-content: flex-start;
        }

        .right-msg {
            justify-content: flex-end;
            margin-right: 5px;
        }

        .msg-bubble {
            position: relative;
            padding: 10px;
            border-radius: 10px;
            margin-top: 5px;
        }
        .msg-info {
            display: flex;
            align-items: flex-end;
            justify-content: center; /* if you want to center the contents horizontally */
            margin-bottom: 0px;
        }

        .msg-info-name {
            display: block;
            font-size: 12px;
            font-weight: bold;
        }

        .source a:hover {
            background-color: darkgrey;
        }

        .right-msg .msg-bubble {
            background-color: var(--user-bubble-color);
            color: white;
            position: relative; /* Add this line */
        }       

        .right-msg .msg-bubble::after {
            content: "";
            position: absolute;
            bottom: -5px; /* Adjust this value as needed */
            right: 7px;
            width: 0;
            height: 0;
            border: 10px solid transparent;
            border-left-color: var(--user-bubble-color);
            border-right: 0;
            margin-right: -10px;
            transform: rotate(270deg);
        }
        
        .left-msg .msg-bubble {
            background-color: var(--bot-bubble-color);
            color: black;
            position: relative; 
        }
        
        .left-msg .msg-bubble::after {
            content: "";
            position: absolute;
            bottom: -5px; 
            left: 5px;
            width: 0;
            height: 0;
            border: 10px solid transparent;
            border-right-color: var(--bot-bubble-color);
            border-left: 0;
            margin-left: -10px;
            transform: rotate(90deg);
        }
        

        .msg-image {
            display: flex;
            align-items: center;
            justify-content: center;
            position: relative;
            width: 50px;
            height: 50px;
        }
        .like-button {
            background-color: transparent;
            border: none;
            outline: none;
            font-size: 16px;
            cursor: pointer;
            color: #999;
        }

        .dislike-button {
            background-color: transparent;
            border: none;
            outline: none;
            font-size: 16px;
            cursor: pointer;
            color: #999;
        }

        .msg-image span {
            display: inline-block;
            width: 10px;
            height: 10px;
            margin: 2px;
            border-radius: 50%;
            background-color: var(--dot-color);
            animation: typing 1s ease-in-out infinite;
        }

        .msg-image span:nth-child(2) {
            animation-delay: 0.1s;
        }

        .msg-image span:nth-child(3) {
            animation-delay: 0.2s;
        }
        /* The styling for the chatbot messages and rating ends here */

        @keyframes typing {
            0% {
                transform: translateY(0);
            }
            50% {
                transform: translateY(-8px);
            }
            100% {
                transform: translateY(0);
            }
        }

        /* Animation for sliding up the chatbot */
        @keyframes slide-up {
            from {
                transform: translateY(100%);
            }
            to {
                transform: translateY(0%);
            }
        }

        /* Animation for sliding down the widget button */
        @keyframes slide-down {
            from {
                transform: translateY(0%);
            }
            to {
                transform: translateY(100%);
            }
        }
        /* I'm not sure where all these post classes are coming from */
        .post {
            width: 400px;
            font-family: 'Lexend', sans-serif;
        }
        .post-image {
            display: block;
            width: 100%;
        }

        .post-ratings-container {
            display: flex;
            padding: 12px 0;
            justify-content: flex-start;
        }

        .post-rating {
            display: flex;
            align-items: center;
            cursor: default;
        }

        .post-rating-button {
            margin-right: 4px;
            cursor: pointer;
            color: #555555;
        }
        /* html body {
            border: none;
        }
        body {
            overflow-x: auto; 
        } */

        /* suggested questions */
        .parent-div {
            display: flex;
            flex-direction: column;
            justify-content: flex-end;
        }
        /* suggested questions done */

